--- a/DreamTeamProj/WebContent/css/styles.css
+++ b/DreamTeamProj/WebContent/css/styles.css
@@ -1,13 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-html,
-body {
+html, body {
     margin: 0;
     padding: 0;
     min-height: 100%;
@@ -16,16 +13,13 @@ body {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
-
-.header,
-.footer {
+.header, .footer {
     position: absolute;
     background-color: darkgrey;
     width: 100%;
     z-index: 5;
     box-shadow: 0 0 5px black;
 }
-
 #background {
     width: 100%;
     height: 100%;
@@ -33,7 +27,6 @@ body {
     flex-direction: column;
     align-content: stretch;
 }
-
 .header {
     top: 0px;
     height: 3em;
@@ -42,7 +35,6 @@ body {
     flex-direction: row;
     justify-content: space-between;
 }
-
 .footer {
     bottom: 0px;
     order: 3;
@@ -51,7 +43,6 @@ body {
     padding-top: 3;
     padding-right: 16;
 }
-
 .main {
     padding-top: 3em;
     padding-bottom: 1.3em;
@@ -63,50 +54,43 @@ body {
     flex-direction: row;
     align-items: stretch;
 }
-
 .legal-copyright {
     color: whitesmoke;
     text-align: right;
     font-size: 12;
     margin: 0;
 }
-
 .firstTab {
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: stretch;
 }
-
 .custom-restricted-width {
     display: inline-block;
     position: relative;
     height: 48%;
 }
-
 .editTextTabButton {
     flex: 1;
 }
-
 //TODO
 .showTextButton {
     height: 100%;
 }
-
 .openTextButtonLink {
     width: 20px;
     padding: 6;
     margin: 0;
 }
-
 .oe {
     flex: auto;
     display: flex;
     flex-direction: column;
     align-content: space-between;
-    margin: 5;
+    /*margin: 5;*/
+    position: relative;
 }
-
 .left-side {
     background-color: white;
     display: flex;
@@ -117,21 +101,17 @@ body {
     width: 20em;
     z-index: 1;
 }
-
 .add-obj-input {
-    margin: 0;
+    margin: 0px;
 }
-
 .extend-box {
     position: relative;
     flex-grow: 5;
     z-index: 0;
 }
-
 .project-menu {
     margin: 0;
 }
-
 .user-block {
     color: #fff;
     background: cadetblue;
@@ -139,19 +119,15 @@ body {
     font-size: 19px;
     font-weight: 700;
 }
-
 .add-form {
     margin: 0 5px;
 }
-
 .add-form input {
     width: 70%;
 }
-
 .fullscr-button {
     align-self: center;
 }
-
 .divider {
     margin: 5;
     border: 0;
@@ -159,35 +135,29 @@ body {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
-
 .attr-count-td {
     position: relative;
     display: inline-block;
 }
-
 .table-oa {
     flex: auto;
     position: relative;
     width: 100%;
     padding-bottom: 10px;
 }
-
 .table-oa tr {
     width: 100%;
 }
-
 .obj-name-td {
     display: inline-block;
     position: relative;
     width: 85%;
 }
-
 .objects-tr {
     position: relative;
     width: 100%;
     padding: 3 0.4em;
 }
-
 .table-header {
     border-radius: 3px;
     background-color: cadetblue;
@@ -195,31 +165,50 @@ body {
     color: aliceblue;
 }
 .tbody-div {
-    height: 20%;
     overflow-y: auto;
     overflow-x: hidden;
+    flex-grow: 1;
+    padding:0px !important;
+    height: 0;
+    overflow: auto;
 }
-
+.object-container {
+    flex-grow: 1;
+    display: flex;
+}
+.object-box {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 0px !important;
+    border-bottom: 0 !important;
+    border-left: 0 !important;
+    border-right: 0 !important;
+}
 .attr-box {
-    border-radius: 3px;
-    box-shadow: 3px 3px 7px -3px black;
+    border: 0 !important;
+    box-shadow: 1px 1px 15px -2px black !important;
     background: #fff;
-    position: relative;
+    position: absolute;
     width: 20em;
-    height: 20em;
+    height: 250px;
     left: 20.5em;
-    top: -20em;
-    display: block;
-    padding-bottom: 5px;
+    top: 0;
+    display: flex;
+    flex-direction: column;
     z-index: 100;
+    margin: 0;
 }
-
+.table-attr {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
 .elem-name-td {
     display: inline-block;
     position: relative;
     width: 100%;
 }
-
 .user-name-block {
     padding: 0.7em;
     color: #fff;
@@ -228,7 +217,6 @@ body {
     font-size: 17px;
     font-weight: 700;
 }
-
 .left-dash-side {
     background-color: white;
     display: flex;
@@ -239,7 +227,6 @@ body {
     width: 13em;
     z-index: 2;
 }
-
 .user-logout-block {
     padding: 0.7em;
     color: #fff;
@@ -248,11 +235,9 @@ body {
     font-size: 17px;
     font-weight: 700;
 }
-
 .pointer {
     cursor: pointer;
 }
-
 .pure-menu-selected .pure-menu-link {
     color: cadetblue !important;
     font-weight: 700;
