fixed objects and attrs creation, added diagrams to png export

--- a/DreamTeamProj/WebContent/css/styles.css
+++ b/DreamTeamProj/WebContent/css/styles.css
@@ -242,3 +242,7 @@ html, body {
     color: cadetblue !important;
     font-weight: 700;
 }
+/* canvas for diagrams export */
+#canvas {
+    display: none;
+}
