Document import and generation modals, restyled, implemented document import

--- a/DreamTeamProj/WebContent/css/diagram.css
+++ b/DreamTeamProj/WebContent/css/diagram.css
@@ -9,6 +9,12 @@
 	margin-bottom: 0px !important;
 }
 
+.model.panel.panel-default {
+	border-left: 0;
+	border-right: 0;
+	border-radius: 0px;
+}
+
 .functional-model {
 }
 
