--- a/DreamTeamProj/WebContent/css/styles.css
+++ b/DreamTeamProj/WebContent/css/styles.css
@@ -18,7 +18,9 @@ html, body {
     background-color: darkgrey;
     width: 100%;
     z-index: 5;
-    box-shadow: 0 0 5px black;
+    -webkit-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
+    -moz-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
 }
 #background {
     width: 100%;
@@ -38,7 +40,6 @@ html, body {
 .footer {
     bottom: 0px;
     order: 3;
-    height: 1.3em;
     padding-bottom: 3;
     padding-top: 3;
     padding-right: 16;
@@ -97,9 +98,12 @@ html, body {
     flex-direction: column;
     align-content: flex-start;
     padding: 0;
-    box-shadow: 0px 0px 5px black;
+    -webkit-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
+    -moz-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11);
     width: 20em;
     z-index: 1;
+    border-right: 1px solid #ddd;
 }
 .add-obj-input {
     margin: 0px;
@@ -168,7 +172,7 @@ html, body {
     overflow-y: auto;
     overflow-x: hidden;
     flex-grow: 1;
-    padding:0px !important;
+    padding: 0px !important;
     height: 0;
     overflow: auto;
 }
@@ -184,6 +188,9 @@ html, body {
     border-bottom: 0 !important;
     border-left: 0 !important;
     border-right: 0 !important;
+    -webkit-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
+    -moz-box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
+    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.11) !important;
 }
 .attr-box {
     border: 0 !important;
@@ -242,7 +249,9 @@ html, body {
     color: cadetblue !important;
     font-weight: 700;
 }
+
 /* canvas for diagrams export */
+
 #canvas {
     display: none;
 }
