--- a/DreamTeamProj/WebContent/css/workenv.css
+++ b/DreamTeamProj/WebContent/css/workenv.css
@@ -1,6 +1,6 @@
 /* bootstrap */
 
-.list-group-item.active {
+.active {
     background-color: cadetblue !important;
     border-color: cadetblue !important;
 }
@@ -394,20 +394,4 @@
     border-left: 0;
     border-right: 0;
     border-radius: 0;
-}
-#doc-content-frame {
-    flex-grow: 1;
-    width: 100%;
-    height: 100%;
-    border: 0;
-    background-color: #ecf0f1;
-    padding: 10px;
-    overflow-y: auto;
-}
-.jdoc-page {
-    background-color: white;
-    margin: auto;
-    -webkit-box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
 }
