--- a/DreamTeamProj/WebContent/css/workenv.css
+++ b/DreamTeamProj/WebContent/css/workenv.css
@@ -4,6 +4,10 @@
     background-color: cadetblue !important;
     border-color: cadetblue !important;
 }
+.btn-primary {
+    border-color: cadetblue;
+    background-color: cadetblue;
+}
 
 /**/
 
