--- a/DreamTeamProj/WebContent/css/document.css
+++ b/DreamTeamProj/WebContent/css/document.css
@@ -1,7 +1,6 @@
 #doc-content-frame {
     flex-grow: 1;
     width: 100%;
-    height: 100%;
     border: 0;
     background-color: #ecf0f1;
     padding: 10px;
@@ -15,13 +14,20 @@
     box-shadow: 0px 0px 35px -8px rgba(0, 0, 0, 0.75);
 }
 .article-add-box {
-    -webkit-box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75), inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75), inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
-    box-shadow: inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75), inset 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
-    padding: 20px;
-    margin: 10px 0px;
-    width: 794px;
+    box-shadow: 0px 4px 16px 1px rgba(0,0,0,0.11) !important;
+    /*margin: 10px 0px;*/
+    margin: 0px;
+    /*width: 794px;*/
     text-indent: 0px;
+    z-index: 1;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    border-left: 0 !important;
+    border-top: 0 !important;
+}
+.article-add-box .panel-body {
+    flex-grow: 1;
 }
 document-word {
     display: inline;
@@ -31,7 +37,7 @@ document-word:hover {
     background-color: #ecf0f1;
 }
 .added-words {
-    padding: 20px 0px;
+    padding: 8px;
 }
 .added-word {
     margin-right: 5px;
@@ -40,4 +46,14 @@ document-word:hover {
     padding: 2px 8px;
     border-radius: 2px;
     cursor: pointer;
+    line-height: 25px;
+}
+.add-type {
+    margin-bottom: 20px;
+}
+.document-grid-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    flex-grow: 1;
 }
