White color on selected tabs

--- a/DreamTeamProj/WebContent/css/workenv.css
+++ b/DreamTeamProj/WebContent/css/workenv.css
@@ -3,6 +3,7 @@
 .active {
     background-color: cadetblue !important;
     border-color: cadetblue !important;
+    color: white !important;
 }
 .btn-primary {
     border-color: cadetblue;
