--- a/DreamTeamProj/src/main/webapp/app/styles/core.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/core.scss
@@ -1,7 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -9,11 +7,8 @@ html,
 body {
     margin: 0;
     padding: 0;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
     font-family: sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
 }
 
 a,
@@ -30,27 +25,14 @@ a:visited {
     font-weight: 700 !important;
 }
 
-#background {
+.header {
+    position: absolute;
     width: 100%;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-content: stretch;
-}
-
-.footer {
-    padding: 20px 16px;
-    color: black;
 }
 
 .main {
-    order: 2;
-    background-color: whitesmoke;
-    width: 100%;
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
+    height: 100%;
+    padding-top: 52px;
 }
 
 .legal-copyright {
@@ -60,21 +42,10 @@ a:visited {
     margin: 0;
 }
 
-.firstTab {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-}
-
 .custom-restricted-width {
     display: inline-block;
     position: relative;
     height: 48%;
-}
-
-.editTextTabButton {
-    flex: 1;
 }
 
 .pure-menu {
@@ -94,17 +65,6 @@ a:visited {
 }
 .pure-menu-link span {
     font-family: sans-serif
-}
-
-//TODO
-.showTextButton {
-    height: 100%;
-}
-
-.openTextButtonLink {
-    width: 20px;
-    padding: 6;
-    margin: 0;
 }
 
 .oe {
@@ -142,38 +102,12 @@ a:visited {
     margin: 0px;
 }
 
-.extend-box {
-    position: relative;
-    flex-grow: 5;
-    z-index: 0;
-}
-
 .project-menu {
     margin: 0;
     background-color: cadetblue;
     display: flex;
     flex-direction: row;
     width: 280px;
-}
-
-.menu-shrink-container {
-    flex-grow: 1;
-}
-
-.menu-shrink {
-    display: inline-block;
-    padding-top: 8px;
-    padding-left: 14px;
-    color: white;
-    font-size: 16px;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-}
-
-.menu-shrink > img {
-    height: 25px;
-    width: 25px;
 }
 
 .user-block {
@@ -192,12 +126,8 @@ a:visited {
     width: 70%;
 }
 
-.fullscr-button {
-    align-self: center;
-}
-
 .divider {
-    margin: 5;
+    margin: 5px;
     border: 0;
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
@@ -209,17 +139,6 @@ a:visited {
     display: inline-block;
 }
 
-.table-oa {
-    flex: auto;
-    position: relative;
-    width: 100%;
-    padding-bottom: 10px;
-}
-
-.table-oa tr {
-    width: 100%;
-}
-
 .obj-name-td {
     display: inline-block;
     position: relative;
@@ -229,7 +148,7 @@ a:visited {
 .objects-tr {
     position: relative;
     width: 100%;
-    padding: 3 0.4em;
+    padding: 3px 0.4em;
 }
 
 .table-header {
@@ -293,64 +212,3 @@ a:visited {
     width: 100%;
 }
 
-.user-name-logout-block {
-    padding: 0.45em 0.7em 0 0.7em;
-    color: #fff;
-    background: cadetblue;
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-size: 17px;
-    font-weight: 700;
-}
-
-.cursor-pointer {
-    cursor: pointer;
-}
-
-
-/* canvas for diagrams export */
-
-#canvas {
-    display: none;
-}
-
-.settings-links {
-    margin: 10px auto 5px 10px;
-    display: flex;
-    flex-direction: row;
-}
-
-.settings-main {
-    flex-direction: column !important;
-    padding-top: 2.625em !important;
-}
-
-.icons-grey {
-    color: gray;
-}
-
-.link-nav-block {
-    margin-right: 7px;
-}
-
-.cursor-default {
-    cursor: default;
-}
-
-.settings-header {
-    height: 2.625em !important;
-}
-
-.link-nav-block a,
-.link-nav-block a:link,
-.link-nav-block a:visited,
-.link-nav-block a:active {
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-size: 13px;
-    color: dimgrey;
-}
-
-.link-nav-block a:hover {
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-size: 13px;
-    color: darkgray;
-}
