--- a/DreamTeamProj/src/main/webapp/app/templates/header.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" ng-controller="HeaderCtrl">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">DB</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,10 +17,15 @@
                 <li><a href="#">О проекте</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a ui-sref="login">Логин</a></li>
-                <li><a ui-sref="register">Регистрация</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+
+                <li ng-hide="authenticated"><a ui-sref="login">Логин</a></li>
+                <li ng-hide="authenticated"><a ui-sref="register">Регистрация</a></li>
+
+                <li class="dropdown" ng-show="authenticated">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="icon-user fa fa-user fa-2x"></span>{{account.fullname}}
+                        <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
