--- a/DreamTeamProj/src/main/webapp/app/styles/shared/palette.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/shared/palette.scss
@@ -1,1 +1,6 @@
-$color-primary: #009688;
+$color-primary: #2196F3;
+$color-secondary: #546e7a;
+$color-error: #B71C1C;
+$color-error-background: #FFCDD2;
+
+$label-color: #757575;
