--- a/DreamTeamProj/src/main/webapp/app/templates/header.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/header.html
@@ -18,20 +18,17 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
 
-                <li ng-hide="authenticated"><a ui-sref="login">Логин</a></li>
-                <li ng-hide="authenticated"><a ui-sref="register">Регистрация</a></li>
+                <li ng-hide="session.authenticated"><a ui-sref="login">Логин</a></li>
+                <li ng-hide="session.authenticated"><a ui-sref="register">Регистрация</a></li>
 
-                <li class="dropdown" ng-show="authenticated">
+                <li class="dropdown" ng-show="session.authenticated">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="icon-user fa fa-user fa-2x"></span>{{account.fullname}}
+                        <span class="icon-user fa fa-user fa-2x"></span>{{session.account.fullname}}
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#" ng-click="logout()">Logout</a></li>
+                        <li><a href="#">Settings</a></li>
                     </ul>
                 </li>
             </ul>
