--- a/DreamTeamProj/src/main/webapp/app/templates/header.html
+++ b/DreamTeamProj/src/main/webapp/app/templates/header.html
@@ -27,8 +27,9 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" ng-click="logout()">Logout</a></li>
                         <li><a href="#">Settings</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#" ng-click="logout()">Logout</a></li>
                     </ul>
                 </li>
             </ul>
