--- a/DreamTeamProj/src/main/webapp/app/styles/forms.scss
+++ b/DreamTeamProj/src/main/webapp/app/styles/forms.scss
@@ -9,7 +9,7 @@ div.form-group {
   margin-bottom: 20px;
 }
 
-span.input-group-addon, input.form-control {
+span.input-group-addon, input.form-control, textarea.form-control {
   border: 0;
   border-bottom: 2px solid $color-primary;
   background-color: white;
@@ -21,6 +21,11 @@ span.input-group-addon, input.form-control {
     box-shadow: none;
     border-color: $color-primary;
   }
+}
+
+textarea.form-control {
+  resize: none;
+  overflow: auto;
 }
 
 span.input-group-addon {
